# agent-template-acceptance-node-02

./: .gitignore  AGENTS.md  README.md  latest-authority-manifest.json  pyproject.toml
.github/workflows/: federation-discovery.yml  heartbeat.yml  sync-agent-card.yml  sync-federation-descriptor.yml
.well-known/: agent-federation.json
bundles/871cff32070a06ff966700cdcc0e65825cd4b9c4/: source-authority-bundle.json
bundles/871cff32070a06ff966700cdcc0e65825cd4b9c4/.authority-exports/: canonical-surface.json  surface-metadata.json
docs/governance/: DEFAULT_BRANCH_GOVERNANCE_VALIDATION.md
scripts/: federation_utils.py  heartbeat_postcondition.py  heartbeat_workflow_guard.py  nadi_daemon.py  nadi_send.py  quickstart.py  render_agent_card.py  render_federation_descriptor.py  setup_node.py
scripts/governance/: _models.py  _protection.py  _repo.py
tests/: test_federation.py  test_governance.py  test_identity.py  test_nadi.py  test_workflow.py
