[project]
name = "federation-node-kernel"
version = "0.1.0"
description = "Shared Python kernel for agent-federation nodes"
requires-python = ">=3.11"
license = "MIT"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "pyyaml>=6.0",
]
federation = [
    "nadi-kit @ git+https://github.com/kimeisele/steward-federation.git@c613577b7353d3cb1fd31be542aed8766f195079",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["head_agent"]
